{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 548,
  "lineage": "d6d2b32c-d622-b765-7b37-4b67a3a1ecff",
  "resources": [
    {
      "module": "module.aws-elb-mod",
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:988940651769:loadbalancer/app/tf-lb/af6196e8b076a754",
            "arn_suffix": "app/tf-lb/af6196e8b076a754",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-56069837.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:988940651769:loadbalancer/app/tf-lb/af6196e8b076a754",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb",
            "security_groups": [
              "sg-0553e6faebe08a576"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fd06e86e10c5301"
              },
              {
                "subnet_id": "subnet-06b238de78eb725e4"
              }
            ],
            "subnets": [
              "subnet-00fd06e86e10c5301",
              "subnet-06b238de78eb725e4"
            ],
            "tags": {
              "Environment": "Non-prod",
              "Name": "tf-lb"
            },
            "tags_all": {
              "Environment": "Non-prod",
              "Name": "tf-lb"
            },
            "vpc_id": "vpc-0de652a10de12c1f1",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.aws-sg-mod.aws_security_group.web",
            "module.aws-vpc-mod.aws_subnet.sub0",
            "module.aws-vpc-mod.aws_subnet.sub1",
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-elb-mod",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "HTTP_LIST",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:988940651769:listener/app/tf-lb/af6196e8b076a754/6150535b3b37dbe1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:988940651769:targetgroup/tf-tgroup/eac41de80c1b6067",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:988940651769:listener/app/tf-lb/af6196e8b076a754/6150535b3b37dbe1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:988940651769:loadbalancer/app/tf-lb/af6196e8b076a754",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-elb-mod.aws_lb.tf-lb",
            "module.aws-elb-mod.aws_lb_target_group.tf-tg-instance",
            "module.aws-sg-mod.aws_security_group.web",
            "module.aws-vpc-mod.aws_subnet.sub0",
            "module.aws-vpc-mod.aws_subnet.sub1",
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-elb-mod",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tf-tg-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:988940651769:targetgroup/tf-tgroup/eac41de80c1b6067",
            "arn_suffix": "targetgroup/tf-tgroup/eac41de80c1b6067",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:988940651769:targetgroup/tf-tgroup/eac41de80c1b6067",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-tgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0de652a10de12c1f1"
          },
          "dependencies": [
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-mod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remotesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:security-group/sg-06f8c07a811d1bc00",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f8c07a811d1bc00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf_remotesg",
            "name_prefix": "",
            "owner_id": "988940651769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_remotesg"
            },
            "tags_all": {
              "Name": "tf_remotesg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de652a10de12c1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-mod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:security-group/sg-0553e6faebe08a576",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0553e6faebe08a576",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_websg",
            "name_prefix": "",
            "owner_id": "988940651769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_websg"
            },
            "tags_all": {
              "Name": "tf_websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de652a10de12c1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-mod",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "pubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:route-table/rtb-0e726dd5950648f4e",
            "default_route_table_id": "rtb-0e726dd5950648f4e",
            "id": "rtb-0e726dd5950648f4e",
            "owner_id": "988940651769",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0aba12811b821ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfpubrt"
            },
            "tags_all": {
              "Name": "tfpubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de652a10de12c1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-mod.aws_internet_gateway.intgw",
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-mod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:internet-gateway/igw-0a0aba12811b821ea",
            "id": "igw-0a0aba12811b821ea",
            "owner_id": "988940651769",
            "tags": {
              "Name": "tfintgw"
            },
            "tags_all": {
              "Name": "tfintgw"
            },
            "vpc_id": "vpc-0de652a10de12c1f1"
          },
          "dependencies": [
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-mod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a13692334065e1c",
            "route_table_id": "rtb-0e726dd5950648f4e",
            "subnet_id": "subnet-00fd06e86e10c5301"
          },
          "dependencies": [
            "module.aws-vpc-mod.aws_default_route_table.pubroute",
            "module.aws-vpc-mod.aws_internet_gateway.intgw",
            "module.aws-vpc-mod.aws_subnet.sub0",
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-mod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07002ae0d937108d1",
            "route_table_id": "rtb-0e726dd5950648f4e",
            "subnet_id": "subnet-06b238de78eb725e4"
          },
          "dependencies": [
            "module.aws-vpc-mod.aws_default_route_table.pubroute",
            "module.aws-vpc-mod.aws_internet_gateway.intgw",
            "module.aws-vpc-mod.aws_subnet.sub1",
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-mod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:subnet/subnet-00fd06e86e10c5301",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fd06e86e10c5301",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988940651769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tfsub0"
            },
            "tags_all": {
              "Name": "tfsub0"
            },
            "vpc_id": "vpc-0de652a10de12c1f1"
          },
          "dependencies": [
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-mod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:subnet/subnet-06b238de78eb725e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b238de78eb725e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988940651769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tfsub1"
            },
            "tags_all": {
              "Name": "tfsub1"
            },
            "vpc_id": "vpc-0de652a10de12c1f1"
          },
          "dependencies": [
            "module.aws-vpc-mod.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-mod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:988940651769:vpc/vpc-0de652a10de12c1f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0e85f143d5284825f",
            "default_route_table_id": "rtb-0e726dd5950648f4e",
            "default_security_group_id": "sg-04e78c6bc84646bb5",
            "dhcp_options_id": "dopt-01ff4d1ca34167ea2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0de652a10de12c1f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e726dd5950648f4e",
            "owner_id": "988940651769",
            "tags": {
              "Name": "tfvpc"
            },
            "tags_all": {
              "Name": "tfvpc"
            }
          }
        }
      ]
    }
  ]
}